Update environment to fix problems with gcc version against mybinder version

--- a/notebooks/MATH60082 - Labs Week 3.ipynb
+++ b/notebooks/MATH60082 - Labs Week 3.ipynb
@@ -15,7 +15,20 @@
    "execution_count": 1,
    "id": "18f0c68d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IncrementalExecutor::executeFunction: symbol '_ZN5boost6system16generic_categoryEv' unresolved while linking function '__cxx_global_var_initcling_module_5_.16'!\n",
+      "You are probably missing the definition of boost::system::generic_category()\n",
+      "Maybe you need to load the corresponding shared library?\n",
+      "IncrementalExecutor::executeFunction: symbol '_ZN5boost6system15system_categoryEv' unresolved while linking function '__cxx_global_var_initcling_module_5_.16'!\n",
+      "You are probably missing the definition of boost::system::system_category()\n",
+      "Maybe you need to load the corresponding shared library?\n"
+     ]
+    }
+   ],
    "source": [
     "#include \"math60082_lab_plot_loader.hpp\""
    ]
