--- a/notebooks/MATH60082 - Lecture 10 - Quad Method.ipynb
+++ b/notebooks/MATH60082 - Lecture 10 - Quad Method.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dd2ffe60",
+   "id": "829d52b5",
    "metadata": {},
    "source": [
     "# Lecture 10\n",
     "\n",
     "## The QUAD method\n",
     "\n",
+    "\n",
     "Click here for an interactive version of this notebook:-\n",
     "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/pjohno/MATH60082/master?labpath=notebooks%2FMATH60082%20-%20Lecture%2010%20Quad%20Method.ipynb)\n",
-    "\n",
     "\n",
     "Consider the well-known Black and Scholes (1973) partial differential equation for an option with an underlying\n",
     "asset following geometric Brownian motion:\n",
@@ -67,9 +67,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "12a0fc8f",
+   "id": "5b50171c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IncrementalExecutor::executeFunction: symbol '_ZN5boost6system16generic_categoryEv' unresolved while linking function '__cxx_global_var_initcling_module_5_.16'!\n",
+      "You are probably missing the definition of boost::system::generic_category()\n",
+      "Maybe you need to load the corresponding shared library?\n",
+      "IncrementalExecutor::executeFunction: symbol '_ZN5boost6system15system_categoryEv' unresolved while linking function '__cxx_global_var_initcling_module_5_.16'!\n",
+      "You are probably missing the definition of boost::system::system_category()\n",
+      "Maybe you need to load the corresponding shared library?\n"
+     ]
+    }
+   ],
    "source": [
     "// load libraries\n",
     "#include \"math60082_lab_plot_loader.hpp\""
@@ -78,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "eccc2d2f",
+   "id": "f60428f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdc04b08",
+   "id": "619a377c",
    "metadata": {},
    "source": [
     "Numerically we also will have to bound the intergration, so we need a way to input these values. In fact the integration will look like\n",
@@ -122,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "664439c8",
+   "id": "30b745f0",
    "metadata": {},
    "source": [
     "Input the function $A$ as given by the formula:"
@@ -131,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aa1c3d3a",
+   "id": "976ac969",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0b53608",
+   "id": "56aabdcb",
    "metadata": {},
    "source": [
     "Input the function $B$ as given by the formula:"
@@ -153,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6ac84f76",
+   "id": "32ccf364",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2c2e7b8",
+   "id": "6a4b5131",
    "metadata": {},
    "source": [
     "Here we include a simple method for integrating a function according to the Simpsons rule. It assumes that n is even. "
@@ -175,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9beda427",
+   "id": "50914e71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82f0b451",
+   "id": "4fc10ba7",
    "metadata": {},
    "source": [
     "Resetting the grid over an interval:"
@@ -212,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eaae044f",
+   "id": "b9fd8f5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,18 +241,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc95ec90",
+   "id": "b8900186",
    "metadata": {},
    "source": [
     "# Example - Call Option\n",
     "\n",
     "We first set up the grid over the interval by applying a log transform\n",
     "$$\n",
-    "x = \\log(S_0)\n",
+    "x = log(S_0)\n",
     "$$\n",
     "and for the $y$ variable at $T$ for a call option we use\n",
     "$$\n",
-    "y \\in [ \\log(X) , \\log (X) + \\xi*\\sigma*T ] ,\n",
+    "y \\in [ log(X) , log (X) + \\xi \\sigma T ] ,\n",
     "$$\n",
     "where $\\xi$ is some grid scale factor set large enough to capture the value of the option.\n",
     "After the variable $k$ is assigned, we can generate values of the integrand, $f_j$\n",
@@ -257,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0b4bf9ed",
+   "id": "7456506c",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bad6f1a",
+   "id": "e662df38",
    "metadata": {},
    "source": [
     "Now put this in a function so that we can investigate the convergence"
@@ -313,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "79e87c15",
+   "id": "3b45d0ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dcdb768d",
+   "id": "152dd522",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16c8ae2b",
+   "id": "afa21c78",
    "metadata": {},
    "source": [
     "Now we can see the power of this method, since we use integration and the simpsons rule we are able to get 4th order convergence,\n",
@@ -407,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd4b7190",
+   "id": "68008072",
    "metadata": {},
    "source": [
     "## Example -- Up and Out Barrier Call Option\n",
@@ -424,23 +437,23 @@
     "$$\n",
     "At the terminal time, as before apply a log transform so that the $y$ variable at $T$ becomes\n",
     "$$\n",
-    "y \\in [ \\log(X) , \\log (X) + \\xi*\\sigma*T ] .\n",
+    "y \\in [ log(X) ,  log (X) + \\xi \\sigma T ] .\n",
     "$$\n",
     "\n",
     "Now for the $x$ grid, this is set at $t=t_{K-1}$, and we use the fact that $V$ is zero above the barrier to ignore any point above $S>B$, therefore\n",
     "$$\n",
-    "x \\in [ \\log(S_0) - \\xi*\\sigma*sqrt(T) , \\log(B) ] .\n",
+    "x \\in [  log(S_0) - \\xi \\sigma sqrt(T) , log(B) ] .\n",
     "$$\n",
     "\n",
-    "The lower boundary here is calculated to be sufficiently small such that $B(\\log(S_0), y_\\text{min} , t_k )V(y_\\text{min},t_k)\\approx 0 $ for $y<y_\\text{min}$.\n",
+    "The lower boundary here is calculated to be sufficiently small such that $B( log(S_0), y_\\text{min} , t_k )V(y_\\text{min},t_k) = 0 $ for $y<y_\\text{min}$.\n",
     "\n",
-    "The grids follow this pattern through time until we arrive at the last step, at which point we will wish to calculate $x_0 = \\log(S_0)$."
+    "The grids follow this pattern through time until we arrive at the last step, at which point we will wish to calculate $x_0 =  log(S_0)$."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "401e1dad",
+   "id": "c9eaf9db",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "78fc3630",
+   "id": "26da5081",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cc1f964",
+   "id": "6e7772ff",
    "metadata": {},
    "source": [
     "Now all that need to be done compared to the code above, is to put in `vNew` and `vOld` to calculate the option values at each timestep as we would do with an explicit method."
@@ -587,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1d8d15dd",
+   "id": "98eb7797",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7c3a5a59",
+   "id": "e1d251bb",
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5378f997",
+   "id": "ae8a1a79",
    "metadata": {},
    "source": [
     "Again using integration and the simpsons rule, we are able to get 4th order convergence,\n",
