Update jupyter lab version on environment

--- a/notebooks/MATH60082 - Labs Week 10 - Part II.ipynb
+++ b/notebooks/MATH60082 - Labs Week 10 - Part II.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#include \"../include/math60082_markupTable.hpp\"\n",
+    "#include \"math60082_lab_plot_loader.hpp\"\n",
     "#include <iostream>\n",
     "#include <vector>\n",
     "#include <chrono>\n",
