--- a/notebooks/MATH60082 - Labs Week 10 - Part III.ipynb
+++ b/notebooks/MATH60082 - Labs Week 10 - Part III.ipynb
@@ -82,6 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include \"math60082_lab_plot_loader.hpp\"\n",
     "#include <iostream>\n",
     "#include <vector>\n",
     "#include <chrono>\n",
@@ -344,23 +345,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " n    | V_n \n",
-      "20 | 1.47217\n",
-      "40 | 1.47464\n",
-      "80 | 1.47409\n",
-      "160 | 1.47467\n"
+      "|             n|           V_n|\n",
+      "|--------------|--------------|\n",
+      "|            20|       1.47217|\n",
+      "|            40|       1.47464|\n",
+      "|            80|       1.47409|\n",
+      "|           160|       1.47467|\n"
      ]
     }
    ],
    "source": [
-    "cout << \" n    | V_n \\n\";\n",
+    "tableRow(\"n\",\"V_n\");\n",
+    "emptyTableRow(2);\n",
     "for(int k=1;k<=4;k++)\n",
     "{\n",
     "    int n=10*pow(2,k);\n",
     "    iMax = n;\n",
     "    jMax = n;\n",
     "    double value = americanPut_CN(S0,X,T,r,sigma,iMax,jMax,SMax,1.e-6,1000);\n",
-    "    cout << n << \" | \" << value << \"\\n\";\n",
+    "    tableRow(n,value);\n",
     "}"
    ]
   },
@@ -398,18 +401,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " n    | V_n      | diff    | V_extrap  \n",
-      "20 | 1.27856 | 1.27856 | 1.70474\n",
-      "40 | 1.34674 | 0.0681884 | 1.36947\n",
-      "80 | 1.3615 | 0.0147517 | 1.36641\n",
-      "160 | 1.36539 | 0.00389047 | 1.36668\n",
-      "320 | 1.36641 | 0.00102095 | 1.36675\n"
+      "|             n|           V_n|          diff|      V_extrap|\n",
+      "|--------------|--------------|--------------|--------------|\n",
+      "|            20|       1.27856|       1.27856|       1.70474|\n",
+      "|            40|       1.34674|     0.0681884|       1.36947|\n",
+      "|            80|        1.3615|     0.0147517|       1.36641|\n",
+      "|           160|       1.36539|    0.00389047|       1.36668|\n",
+      "|           320|       1.36641|    0.00102095|       1.36675|\n"
      ]
     }
    ],
    "source": [
     "S0 = X;\n",
-    "cout << \" n    | V_n      | diff    | V_extrap  \\n\";\n",
+    "tableRow(\"n\",\"V_n\",\"diff\",\"V_extrap\");\n",
+    "emptyTableRow(4);\n",
     "for(int k=1;k<=5;k++)\n",
     "{\n",
     "    int n=10*pow(2,k);\n",
@@ -417,9 +422,7 @@
     "    jMax = n;\n",
     "    double value = americanPut_CN(S0,X,T,r,sigma,iMax,jMax,5*X,1.e-8,1000);\n",
     "    double value_extrap = (4.*value - valueOld)/3.;\n",
-    "    cout << n << \" | \" << value << \" | \" ;\n",
-    "    cout << value - valueOld << \" | \";\n",
-    "    cout << value_extrap << \"\\n\";\n",
+    "    tableRow(n,value,value - valueOld,value_extrap);\n",
     "    valueOld = value;\n",
     "}"
    ]
